// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`1.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
f<<<T>(x)

=====================================output=====================================
f << (<T>x);

================================================================================
`;

exports[`2.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
f<<T>(v: T) => void>();

=====================================output=====================================
f<<T>(v: T) => void>();

================================================================================
`;

exports[`3.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(class extends f<<T>(v: T) => void> {});

=====================================output=====================================
(class extends f<<T>(v: T) => void> {});

================================================================================
`;

exports[`3.ts format[typescript] 1`] = `
"',' expected. (1:17)
> 1 | (class extends f<<T>(v: T) => void> {});
    |                 ^
  2 |
Cause: ',' expected."
`;

exports[`4.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(@f<<T>(v: T) => void>() class {});

=====================================output=====================================
(
  @f<<T>(v: T) => void>()
  class {}
);

================================================================================
`;

exports[`5.tsx format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<Component<<T>(v: T) => void> />

=====================================output=====================================
<Component<<T>(v: T) => void> />;

================================================================================
`;

exports[`5.tsx format[typescript] 1`] = `
"Identifier expected. (1:11)
> 1 | <Component<<T>(v: T) => void> />
    |           ^
  2 |
Cause: Identifier expected."
`;

exports[`6.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
new f<<T>(v: T) => void>();

=====================================output=====================================
new f<<T>(v: T) => void>();

================================================================================
`;
